--- a/pax-cdi-test-support/src/main/resources/versions.properties
+++ b/pax-cdi-test-support/src/main/resources/versions.properties
@@ -17,14 +17,7 @@
 # under the License.
 #
 
-#handlers = org.slf4j.bridge.SLF4JBridgeHandler
-#handlers=java.util.logging.ConsoleHandler
-#org.slf4j.bridge.SLF4JBridgeHandler.level = FINEST
-
-log4j.rootCategory=INFO, stdout
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout.ConversionPattern=%p [%c] - %m%n
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-log4j.logger.org.ops4j.pax.cdi.extension = DEBUG
+version.pax.cdi = ${project.version}
+version.pax.web = ${pax.web.version}
+version.jetty = ${jetty.version}
+version.owb1 = ${openwebbeans1.version}
