--- a/itest/src/it/itest-standalone/src/test/resources/controlled-exam.properties
+++ b/itest/src/it/itest-standalone/src/test/resources/controlled-exam.properties
@@ -17,14 +17,12 @@
 # under the License.
 #
 
-#handlers = org.slf4j.bridge.SLF4JBridgeHandler
-#handlers=java.util.logging.ConsoleHandler
-#org.slf4j.bridge.SLF4JBridgeHandler.level = FINEST
+# default, javaee, test (default), cdi
+# for "cdi" we use PaxExam.delegate = org.ops4j.pax.exam.junit.impl.InjectingRunner
+# otherwise it's PaxExam.delegate = org.ops4j.pax.exam.junit.impl.ProbeRunner
+# "test" adds some default @Configuration Option[]
+# "default" allows manual control over provided @Configuration/Option[]
+pax.exam.system = default
 
-log4j.rootCategory=INFO, stdout
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout.ConversionPattern=%p [%c] - %m%n
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-log4j.logger.org.ops4j.pax.cdi.extension = DEBUG
+# "pax-logging" by default which adds link:classpath:META-INF/links/org.ops4j.pax.logging.api.link;start-level=2
+pax.exam.logging = custom
