--- a/pax-cdi-jetty-weld/pom.xml
+++ b/pax-cdi-jetty-weld/pom.xml
@@ -1,3 +1,23 @@
+<!--
+
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -90,6 +110,13 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.faces</groupId>
+            <artifactId>javax.faces-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jsp_2.2_spec</artifactId>
             <version>1.1</version>
@@ -121,10 +148,18 @@
                             org.jboss.weld.*; version="[1,3)",
                             javax.servlet.*;version="[2,4)",
                             javax.el.*;version="[2.2,4)",
+                            javax.faces.*;resolution:=optional,
                             org.eclipse.jetty*;version="[9.3,10)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
                         </Import-Package>
+                        <Export-Package>
+                            org.jboss.weld.environment.servlet.jsf,
+                            org.jboss.weld.environment.servlet.util
+                        </Export-Package>
+                        <Provide-Capability>
+                            org.ops4j.pax.cdi.faces; provider="pax-cdi-jetty-weld"
+                        </Provide-Capability>
                         <_dsannotations>*</_dsannotations>
                     </instructions>
                 </configuration>
