--- a/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
@@ -1,3 +1,23 @@
+<!--
+
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -66,10 +86,20 @@
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Web-ContextPath>/sample1</Web-ContextPath>
                         <Pax-ManagedBeans>WEB-INF/beans.xml</Pax-ManagedBeans>
-                        <Import-Package>javax.servlet.*;version="[2.6,4)", *</Import-Package>
+                        <!-- javax.servlet.jsp package will wire our WAR to pax-web-jsp with correct EL Factory -->
+                        <Import-Package>
+                            javax.servlet*;version="[2.6,4)",
+                            javax.servlet.jsp,
+                            *
+                        </Import-Package>
+                        <DynamicImport-Package>
+                            org.ops4j.pax.cdi.*,
+                            org.ops4j.pax.web.*,
+                            org.apache.webbeans.*
+                        </DynamicImport-Package>
                         <Require-Capability>
-                            osgi.cdi.extension; filter:="(&amp;(osgi.cdi.extension=pax-cdi-extension)(version&gt;=${version;==;${pax.cdi.osgi.version.clean}})(!(version&gt;=${version;=+;${pax.cdi.osgi.version.clean}})))",
-                            osgi.extender; filter:="(osgi.extender=osgi.cdi)"
+                            osgi.extender; filter:="(osgi.extender=pax.cdi)",
+                            org.ops4j.pax.cdi.extension; filter:="(extension=pax-cdi-extension)"
                         </Require-Capability>
                     </instructions>
                 </configuration>
