--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -1,3 +1,23 @@
+<!--
+
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -86,19 +106,18 @@
                             org.apache.deltaspike.proxy.spi,
                             *
                         </Import-Package>
-                        <Require-Bundle>
-                            org.apache.deltaspike.core.deltaspike-core-impl,
-                            org.apache.deltaspike.modules.deltaspike-data-module-impl,
-                            org.apache.deltaspike.modules.deltaspike-jpa-module-impl
-                        </Require-Bundle>
+                        <DynamicImport-Package>
+                            org.apache.deltaspike.*,
+                            org.ops4j.pax.cdi
+                        </DynamicImport-Package>
                         <Require-Capability>
-                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version&gt;=${version;==;${pax.cdi.osgi.version.clean}})(!(version&gt;=${version;=+;${pax.cdi.osgi.version.clean}})))",
+                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-partial-bean-module-impl))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-data-module-impl))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-jpa-module-impl))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-core-impl))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-core-api))",
-                            osgi.extender; filter:="(osgi.extender=osgi.cdi)"
+                            osgi.extender; filter:="(osgi.extender=pax.cdi)"
                         </Require-Capability>
                     </instructions>
                 </configuration>
