--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.ops4j.pax</groupId>
-    <artifactId>cdi</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+
     <parent>
         <groupId>org.ops4j</groupId>
         <artifactId>master</artifactId>
-        <version>4.2.0</version>
+        <version>4.3.0</version>
     </parent>
 
+    <groupId>org.ops4j.pax</groupId>
+    <artifactId>cdi</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0.0-SNAPSHOT</version>
+
     <name>OPS4J Pax CDI Reactor</name>
+
     <description>Contexts and Dependency Injection for OSGi Applications</description>
 
     <scm>
@@ -21,24 +46,35 @@
     </scm>
 
     <modules>
+        <!--
+            Build order is calculated from dependencies.
+            This list reflects it (kind of), not determines it.
+        -->
+
         <module>pax-cdi-checkstyle-rules</module>
+
         <module>pax-cdi-parent</module>
 
-        <module>pax-cdi-extender</module>
+        <module>pax-cdi-api</module>
         <module>pax-cdi-spi</module>
-        <module>pax-cdi-openwebbeans</module>
+        <module>pax-cdi-extender</module>
+        <module>pax-cdi-extension</module>
 
         <module>pax-cdi-samples</module>
-        <module>pax-cdi-extension</module>
-        <module>pax-cdi-api</module>
+
         <module>pax-cdi-weld</module>
+        <module>pax-cdi-openwebbeans</module>
+
         <module>pax-cdi-web</module>
         <module>pax-cdi-jetty-weld</module>
+        <module>pax-cdi-undertow-weld</module>
         <module>pax-cdi-jetty-openwebbeans</module>
         <module>pax-cdi-undertow-openwebbeans</module>
-        <module>pax-cdi-undertow-weld</module>
+
         <module>pax-cdi-features</module>
+
         <module>pax-cdi-test-support</module>
+
         <module>pax-cdi-manual</module>
     </modules>
 
@@ -97,11 +133,11 @@
         </license>
     </licenses>
 
-    <url>${pax.cdi.wiki.url}</url>
+    <url>https://ops4j1.jira.com/wiki/spaces/PAXCDI/overview</url>
 
     <issueManagement>
         <system>jira</system>
-        <url>http://team.ops4j.org/browse/PAXCDI</url>
+        <url>https://ops4j1.jira.com/projects/PAXCDI/summary/statistics</url>
     </issueManagement>
 
     <developers>
