--- a/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
+++ b/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
@@ -1,26 +1,21 @@
-#Licensed to the Apache Software Foundation (ASF) under one
-#or more contributor license agreements.  See the NOTICE file
-#distributed with this work for additional information
-#regarding copyright ownership.  The ASF licenses this file
-#to you under the Apache License, Version 2.0 (the
-#"License"); you may not use this file except in compliance
-#with the License.  You may obtain a copy of the License at
 #
-#  http://www.apache.org/licenses/LICENSE-2.0
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
 #
-#Unless required by applicable law or agreed to in writing,
-#software distributed under the License is distributed on an
-#"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-#KIND, either express or implied.  See the License for the
-#specific language governing permissions and limitations
-#under the License.
-#---------------------------------------------------------------
-# The default configuration for OpenWebBeans
+#   http://www.apache.org/licenses/LICENSE-2.0
 #
-# The default configuration is intended for a JDK and a simple ServletContainer
-# like jetty, resin or tomcat.
-# 
-#---------------------------------------------------------------
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+#
 
 
 ################################################################################################
@@ -51,7 +46,7 @@ org.apache.webbeans.spi.ApplicationBoundaryService=org.apache.webbeans.corespi.s
 
 ################################### Default Scanner Service ####################################
 #Default implementation of org.apache.webbeans.corespi.ScannerService.
-org.apache.webbeans.spi.ScannerService=org.ops4j.pax.cdi.openwebbeans.impl.BundleScannerService
+org.apache.webbeans.spi.ScannerService=org.ops4j.pax.cdi.openwebbeans.BundleScannerService
 ################################################################################################
 
 ################################### Default EL Adaptor ####################################
@@ -73,7 +68,7 @@ org.apache.webbeans.spi.SecurityService=org.apache.webbeans.corespi.security.Sim
 ################################ Default Implementation-Loader Service ###########################################
 # Service which encapsulates the Service-Loader of Java 1.6+ to allow custom implementations to support Java 1.5
 #org.apache.webbeans.spi.LoaderService=org.apache.webbeans.service.DefaultLoaderService
-org.apache.webbeans.spi.LoaderService=org.ops4j.pax.cdi.openwebbeans.impl.BundleLoaderService
+org.apache.webbeans.spi.LoaderService=org.ops4j.pax.cdi.openwebbeans.BundleLoaderService
 
 ################################################################################################ 
 #################################### SEVERAL CONFIGURATION PARAMETERS ##########################
