--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -74,7 +74,7 @@
         <pax.logging.version>1.10.1</pax.logging.version>
         <pax.swissbox.version>1.8.2</pax.swissbox.version>
         <pax.url.version>2.4.2</pax.url.version>
-        <pax.web.version>6.1.2-SNAPSHOT</pax.web.version>
+        <pax.web.version>6.0.10</pax.web.version>
 
         <slf4j.version>1.6.4</slf4j.version>
         <weld2.version>2.4.5.Final</weld2.version>
