[maven-release-plugin] prepare release cdi-1.0.0

--- a/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>pax-cdi-samples</artifactId>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>..</relativePath>
     </parent>
     
