--- a/itest/src/it/itest-standalone/pom.xml
+++ b/itest/src/it/itest-standalone/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>xbean-finder-shaded</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.xbean</groupId>
+            <artifactId>xbean-asm7-shaded</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.ops4j.pax.cdi</groupId>
