--- a/pax-cdi-features/pom.xml
+++ b/pax-cdi-features/pom.xml
@@ -41,15 +41,11 @@
         features:addurl mvn:org.ops4j.pax.cdi/pax-cdi-features/${project.version}/xml/features
     </description>
 
-    <properties>
-        <dependency.karaf.version>4.1.4</dependency.karaf.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.karaf.features</groupId>
             <artifactId>framework</artifactId>
-            <version>${dependency.karaf.version}</version>
+            <version>${karaf.version}</version>
             <type>kar</type>
             <scope>provided</scope>
             <exclusions>
@@ -98,7 +94,7 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
-                <version>${dependency.karaf.version}</version>
+                <version>${karaf.version}</version>
                 <executions>
                     <execution>
                         <id>verify</id>
@@ -108,8 +104,8 @@
                         </goals>
                         <configuration>
                             <descriptors>
-                                <descriptor>mvn:org.apache.karaf.features/framework/${dependency.karaf.version}/xml/features</descriptor>
-                                <descriptor>mvn:org.apache.karaf.features/standard/${dependency.karaf.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/framework/${karaf.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/standard/${karaf.version}/xml/features</descriptor>
                                 <descriptor>mvn:org.ops4j.pax.web/pax-web-features/${pax.web.version}/xml/features</descriptor>
                                 <descriptor>file:${project.build.directory}/classes/features.xml</descriptor>
                             </descriptors>
