[PAXCDI-236] Upgrade to OpenWebBeans 1.7.6

--- a/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
+++ b/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
@@ -151,6 +151,8 @@ org.apache.webbeans.proxy.mapping.javax.enterprise.context.SessionScoped=org.apa
 org.apache.webbeans.web.eagerSessionInitialisation=false
 ################################################################################################
 
+# see org.apache.webbeans.web.lifecycle.WebContainerLifecycle.startApplication()
+org.apache.webbeans.web.add-beans=false
 
 ######################### Java version for generated proxy classes #############################
 # The Java Version to use for the generated proxy classes.
