--- a/pax-cdi-undertow-openwebbeans/pom.xml
+++ b/pax-cdi-undertow-openwebbeans/pom.xml
@@ -126,6 +126,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
+                            io.undertow.servlet.api;version="[1.4,3)",
                             javax.servlet.*;version="[2,5)",
                             org.apache.webbeans.xml,
                             org.slf4j;version="[1.6,2)";resolution:=optional,
